--- a/B4_Trovato_Carmine/index.html
+++ b/B4_Trovato_Carmine/index.html
@@ -22,31 +22,43 @@
       <header>
 <!-- Jumbotron NAV-->     
         <div class="jumbotron">
+            <div class="social">
+              <ul>
+                <li><a href="#"><img src="images/facebook.jpg" alt="fbook"></a></li>
+                <li><a href="#"><img src="images/twitter.jpg" alt="twitter"></a></li>
+                <li><a href="#"><img src="images/insta.jpg" alt="instagram"></a></li>
+                <li><a href="#"><img src="images/linked.jpg" alt="linkedIn"></a></li>  
+              </ul>
+            </div><!--Social-->
+
           <a href="index.html"><h1>Carmine Trovato</h1></a>
+
+
           <nav class="row">
              <ul class="nav nav-tabs nav-justified">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="bio.html">Bio</a></li>
               <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="contact.html">Contact</a></li>
-             </ul>
+              <li><a href="contact.html">Contact</a></li>  
+            </ul>
           </nav>  
         </div><!-- Jumbotron NAV-->
       </header>
+    </div>  
 
 <!--- BLOCKQUOTE -->    
   <center>
   <blockquote>
       <p>True art is characterized by an irresistible urge in the creative artist.</p>
-      <footer>Albert Einstein<cite title="Source Title"></cite></footer>
+      <footer>Albert Einstein</footer>
   </blockquote>  
   </center>
 
         
-<!------- CAROUSEL ---->
+<!---- CAROUSEL ---->
     <div class="row">
 
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <div id="carousel-example-generic" class="" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -94,8 +106,8 @@
   </a>
 </div>
 
-</div><!--row Carousel -->
 
+</div><!--row Carousel -->
 
 
 
