--- a/B4_Trovato_Carmine/contact.html
+++ b/B4_Trovato_Carmine/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>4 Trovato Carmine</title>
+    <title>B4 Trovato Carmine</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,17 @@
       <div class="container">
 
       <header>
-        <div class="jumbotron">
+<!-- Jumbotron NAV -->
+          <div class="jumbotron">
+            <div class="social">
+              <ul>
+                <li><a href="#"><img src="images/facebook.jpg" alt="fbook"></a></li>
+                <li><a href="#"><img src="images/twitter.jpg" alt="twitter"></a></li>
+                <li><a href="#"><img src="images/insta.jpg" alt="instagram"></a></li>
+                <li><a href="#"><img src="images/linked.jpg" alt="linkedIn"></a></li>  
+              </ul>
+            </div><!--Social-->
+
           <a href="index.html"><h1>Carmine Trovato</h1></a>
           <nav class="row">
              <ul class="nav nav-tabs nav-justified">
@@ -33,26 +43,27 @@
         </div><!-- Jumbotron -->
       </header>
 
+
 <!-- Contact Form -->
+
+<h2>CONTACT</h2>
+<p> Please Leave A Detailed Message & I’ll Get Back To You Within 24 hrs.</p>
 <form role="form">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Email">
+    <label for="exampleInputEmail1">Your Email Address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Your Email Address Here">
   </div>
     <div class="form-group">
-    <label for="exampleInputPassword1">Subject</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Subject">
-  </div>
+    <label for="exampleInputEmail1">Subject</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Subject Here">
+  
   <label for="exampleInputPassword1">Message</label>
   <textarea class="form-control" rows="3" placeholder="Type Kindly"></textarea>
 
-  <button type="submit" class="btn btn-default">SEND</button>
+<!-- Standard button -->
+<button type="button" class="btn btn-default">SEND</button>
 </form>
-
-
-
-
-
+</div>
 
       <footer>  
         <p>&copy; Copyright Carmine Trovato: Web Design & Graphic Art  2014</p>
