--- a/B4_Trovato_Carmine/gallery.html
+++ b/B4_Trovato_Carmine/gallery.html
@@ -22,6 +22,15 @@
       <header>
 <!-- Jumbotron NAV -->
         <div class="jumbotron">
+            <div class="social">
+              <ul>
+                <li><a href="#"><img src="images/facebook.jpg" alt="fbook"></a></li>
+                <li><a href="#"><img src="images/twitter.jpg" alt="twitter"></a></li>
+                <li><a href="#"><img src="images/insta.jpg" alt="instagram"></a></li>
+                <li><a href="#"><img src="images/linked.jpg" alt="linkedIn"></a></li>  
+              </ul>
+            </div><!--Social-->
+
           <a href="index.html"><h1>Carmine Trovato</h1></a>
           <nav class="row">
              <ul class="nav nav-tabs nav-justified">
