--- a/B8_Trovato_Carmine/index.html
+++ b/B8_Trovato_Carmine/index.html
@@ -12,7 +12,7 @@
 			<header>
 
 			    <h1>ITALY</h1>
-			    <h2>2006 Trip</h2>
+			    <h2>2006</h2>
 
 
 			</header>
@@ -20,16 +20,16 @@
 				<div id="pic">
 					<h2>Attractions</h2>
 					<div id="large_pic">
-						<img src="images/image6.jpg" alt="picture">
-						<div id="picture">
-							<h3>The Colosseum</h3>
-						</div>
+						<img src="images/image6.jpg" alt="image">
 					</div>
+						<div id="picture">
+							<h3>The Colosseum</h3>	
+						</div>
 
 				</div>
 
 				<div id="side_text">
-					<h2>History</h2>
+					<h2>ROME</h2>
 					<p>  Rome is the capital of Italy and also of the Province of Rome and of the region of Lazio. With 2.7 million residents in 1,285.3 km2 (496.3 sq mi), it is also the country's largest and most populated comune and fourth-most populous city in the European Union by population within city limits. The urban area of Rome extends beyond the administrative city limits with a population of around 3.8 million. Between 3.2 and 4.2 million people live in Rome metropolitan area. The city is located in the central-western portion of the Italian Peninsula, on the Tiber within Lazio (Latium). The Vatican City is an independent country within the city boundaries of Rome, the only example of a country within a city existing. Rome's history spans more than two and a half thousand years, since its legendary founding in 753 BC. 
 					</p>
 				</div>
