--- a/B9_Trovato_Carmine/form.html
+++ b/B9_Trovato_Carmine/form.html
@@ -14,6 +14,7 @@
 	<body>
 
 			<header>
+				<link rel="shortcut icon" href="images/beach.png">
 			    <h1><a href="index.html">FloridaTravel.com</a></h1>
 			    <p><span id="register"><a href="#">Sign Up</a> </span> <span id="sign_in"> <a href="#">Log In</a></span>
 				</p> 
@@ -29,7 +30,11 @@
 								</a></li>
 								<li><a href = "#">Couples</a></li>
 								<li><a href = "#">Singles</a></li>
+								<li><a href="#"><img src="images/facebook.jpg" alt="fbook">
+							        <a href="#"><img src="images/twitter.jpg" alt="twitter">
+							        <a href="#"><img src="images/google.jpg" alt="google+"></a></li> 
 							</ul>
+
 						</li>
 						<li> <a href = "#">Specials</a></li>
 					</ul>
@@ -44,7 +49,7 @@
 							</ul>
 					</li>
 				</ul>
-				<hr>
+				</br><hr>
 			</header>
 
 <!-- Sign Up Form -->
