--- a/B9_Trovato_Carmine/index.html
+++ b/B9_Trovato_Carmine/index.html
@@ -13,11 +13,14 @@
 	<body>
 
 			<header>
+				<link rel="shortcut icon" href="images/beach.png">
+
 			    <h1><a href="index.html">FloridaTravel.com</a></h1>
+
 			    <p><span id="register"><a href="form.html">Sign Up</a> </span> <span id="sign_in"> <a href="#">Log In</a></span>
 				</p> 
 
-<!-- nav starts here  --> 
+<!-- Navigation --> 
 				<nav>
 					<ul>
 						<li id="home"></li>
@@ -31,7 +34,12 @@
 							</ul>
 						</li>
 						<li> <a href = "#">Specials</a></li>
+				         <li><a href="#"><img src="images/facebook.jpg" alt="fbook">
+				         <a href="#"><img src="images/twitter.jpg" alt="twitter">
+				         <a href="#"><img src="images/google.jpg" alt="google+"></a></li>  
 					</ul>
+				
+
 				</nav>
 				<ul id="menu">
 					<li id="menu_list">MENU
@@ -42,7 +50,7 @@
 							</ul>
 					</li>
 				</ul>
-				<hr>
+				</br><hr>
 
 				<h2>Florida Travel provides the ultimate fun-in-the-sun escape for families, couples and singles. 
 				</h2>
@@ -50,7 +58,7 @@
 				<span id="sign_up_button"><a href="form.html">Sign Up</a></span>
 			</header>
 
-<!-- article starts here --> 
+<!-- Article --> 
 			<article>
 
 
@@ -93,7 +101,7 @@
 						<p>Located on a secluded 27-acre island just 500 yards from Old Town Key West and the Westin Key West Resort & Marina, this luxury resort offers 40 custom designed, fully-equipped ocean or garden view cottages with unique amenities, including a 24-hour ferry access to Key West, a breakfast basket delivered right to your cottage daily, serene beach, tennis, half basketball court, tropical pool and watersports. Relax and rejuvenate at the Luxurious Spa on Sunset Key and surround yourself in an exclusive oasis of healthy indulgence. After a day of pampering, spend a romantic evening with beach front dining and spectacular sunsets at the island’s award-winning Latitudes Restaurant...<br><a href="#"> See Full Post</a></p>							
 					</div>
 				</div>
-
+<!-- Thumbnail --> 
 				<div id="thumbnails">
 					<h2>Florida Beachs</h2>
 					<a href="images/FloridaBeach1.jpg"><img src="images/FloridaBeach1.jpg" alt="picture"></a>
