--- a/B9_Trovato_Carmine/events.html
+++ b/B9_Trovato_Carmine/events.html
@@ -14,6 +14,7 @@
 	<body>
 
 			<header>
+				<link rel="shortcut icon" href="images/beach.png">
 			    <h1><a href="index.html">FloridaTravel.com</a></h1>
 			    <p><span id="register"><a href="form.html">Sign Up</a> </span> <span id="sign_in"> <a href="#">Log In</a></span>
 				</p> 
@@ -30,6 +31,9 @@
 							</ul>
 						</li>
 						<li> <a href = "#">Specials</a></li>
+						<li><a href="#"><img src="images/facebook.jpg" alt="fbook">
+							<a href="#"><img src="images/twitter.jpg" alt="twitter">
+							<a href="#"><img src="images/google.jpg" alt="google+"></a></li> 
 					</ul>
 				</nav>
 				<ul id="menu">
@@ -41,7 +45,7 @@
 							</ul>
 					</li>
 				</ul>
-				<hr>
+				</br><hr>
 
 				<h2>Florida Travel provides the ultimate fun-in-the-sun escape for families, couples and singles. 
 				</h2>
