--- a/B9_Trovato_Carmine/events.html
+++ b/B9_Trovato_Carmine/events.html
@@ -19,18 +19,21 @@
 			    <p><span id="register"><a href="form.html">Sign Up</a> </span> <span id="sign_in"> <a href="#">Log In</a></span>
 				</p> 
  
+<!-- Navigation --> 
 				<nav>
 					<ul>
 						<li id="home"></li>
 						<li> <a href = "events.html">Events</a></li>
 						<li> <a id="drop_down" href = "#">Vacation Packages</a>
 							<ul>
-								<li><a href = "#">Family</a></li>
+								<li><a href = "#">Family
+								</a></li>
 								<li><a href = "#">Couples</a></li>
 								<li><a href = "#">Singles</a></li>
 							</ul>
 						</li>
-				</nav>
+						<li> <a href = "#">Specials</a></li>				
+			</nav>
 				<ul id="menu">
 					<li id="menu_list">MENU
 						<ul>
@@ -40,7 +43,7 @@
 							</ul>
 					</li>
 				</ul>
-				</br><hr>
+				<hr>
 
 				<h2>Florida Travel provides the ultimate fun-in-the-sun escape for families, couples and singles. 
 				</h2>
